--- a/docs/deployment_guide/partner_editable/architecture.adoc
+++ b/docs/deployment_guide/partner_editable/architecture.adoc
@@ -1,12 +1,11 @@
 :xrefstyle: short
 
-Deploying this Partner Solution with default parameters builds the following {partner-product-short-name} environment in the
-AWS Cloud.
+There are two deployment options for deploying {partner-product-short-name} through this AWS QuickStart: single cluster architecture and multicluster architecture. The default option is single cluster, which deploys with default parameters that builds the following {partner-product-short-name} environment in the AWS Cloud.
 
 // Replace this example diagram with your own. Follow our wiki guidelines: https://w.amazon.com/bin/view/AWS_Quick_Starts/Process_for_PSAs/#HPrepareyourarchitecturediagram. Upload your source PowerPoint file to the GitHub {deployment name}/docs/images/ directory in its repository.
 
 [#architecture1]
-.Partner Solution architecture for {partner-product-short-name} on AWS
+.Partner Solution single cluster architecture for {partner-product-short-name} on AWS
 image::../docs/deployment_guide/images/architecture_diagram.png[Architecture]
 
 As shown in <<architecture1>>, this Partner Solution sets up the following:
@@ -20,7 +19,7 @@ As shown in <<architecture1>>, this Partner Solution sets up the following:
 *** An Amazon Elastic Compute Cloud (Amazon EC2) Linux instance to bootstrap the installation of {partner-product-name} in an Amazon EKS cluster and serve as administrator bastion host.
 *** An Amazon EC2 Windows bastion host for access to the {partner-product-short-name} user interface.
 * In the private subnets:
-** A group of Amazon EKS nodes in an Auto Scaling Group with Contour Envoy ingress controller pods and the {partner-product-acronym} installation. For a complete list of the {partner-product-short-name} packages, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.3/tap/GUID-install-components.html#verify-the-installed-packages-1[Verify the installed packages^].
+** A group of Amazon EKS nodes in an Auto Scaling Group with Contour Envoy ingress controller pods and the {partner-product-acronym} installation. For a complete list of the {partner-product-short-name} packages, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.4/tap/install-components.html#verify-the-installed-packages-1[Verify the installed packages^].
 ** A Network Load Balancer (NLB) attached to the private subnets to direct traffic to the Contour Envoy pod. The Contour Envoy container provides ingress and reverse proxy to the {partner-product-acronym} pods for the {partner-product-acronym} user interface and metadata store.
 * Amazon CloudWatch for storing Linux bastion host metrics and {partner-product-acronym} bootstrap logs.
 * AWS Secrets Manager for storing {partner-registry} credentials for the {partner-product-acronym} cluster.
@@ -28,3 +27,21 @@ As shown in <<architecture1>>, this Partner Solution sets up the following:
 * Amazon EKS for the Kubernetes control plane cluster that runs {partner-product-acronym}, Contour Envoy, and other containerized applications.
 
 [.small]#* The template that deploys the Partner Solution into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.#
+
+// TO-DO: needs to be updated to multi-cluster diagram. Using single cluster diagram as placeholder for now
+
+[#architecture2]
+.Partner Solution multicluster architecture for {partner-product-short-name} on AWS
+image::../docs/deployment_guide/images/architecture_diagram.png[Architecture]
+
+As shown in <<architecture2>>, below are additional resources set up in the multi-cluster deployment options:
+
+* Four auto-scaling groups
+* Four Amazon EKS clusters
+* VMware Tanzu Application Platform installed on all four EKS clusters with TAP profiles: build, run, view & iterate
+* Contour Envoy & Ingress Controllers are on three EKS clusters (run, view & iterate)
+* Three Network Load balancers (NLB) are used for above three ingress controllers
+
+More details see https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.3/tap/GUID-multicluster-about.html[Multicluster Tanzu Application Platform Overview^]
+
+
