--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -38,7 +38,10 @@ If necessary, request https://console.aws.amazon.com/servicequotas/home/[service
 |5
 
 |Amazon EKS clusters
-|1
+|1, 4 (multicluster)
+
+|EKS nodes (min/desired/max)
+|single cluster:4/4/6 multicluster:16/16/24
 
 |Secrets Manager secrets
 |1
@@ -51,6 +54,9 @@ If necessary, request https://console.aws.amazon.com/servicequotas/home/[service
 
 |Route 53 private hosted zones
 |1
+
+|Elastic IP
+|5
 |====
 
 === {partner-registry} account
@@ -78,7 +84,7 @@ This Quick Start requires an API token from the {partner-registry} site to downl
 
 === Accept {partner-company-short-name} EULAs
 
-Before deploying this Quick Start, you must accept the following {partner-company-short-name} End User License Agreements (EULAs) for the {partner-registry} account used for the deployment. For more information, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.2/tap/GUID-install-tanzu-cli.html#accept-the-end-user-license-agreements-0[Accept the End User License Agreements].
+Before deploying this Quick Start, you must accept the following {partner-company-short-name} End User License Agreements (EULAs) for the {partner-registry} account used for the deployment. For more information, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.4/tap/install-tanzu-cli.html#accept-the-end-user-license-agreements-0[Accept the End User License Agreements].
 
 [IMPORTANT]
 ====
@@ -96,4 +102,4 @@ You may join or leave CEIP at any time. The CEIP Standard Participation Level pr
 You must acknowledge that you have read the {partner-company-short-name} CEIP policy before you can proceed with the installation.
 ====
 
-For more information, see https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.2/tap/GUID-install.html#install-your-tanzu-application-platform-profile-1[Install your {partner-product-short-name} profile]. To opt out of telemetry participation after installation, see https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.2/tap/GUID-opting-out-telemetry.html[Opting out of telemetry collection].
+For more information, see https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.4/tap/install.html#install-your-tanzu-application-platform-profile-1[Install your {partner-product-short-name} profile]. To opt out of telemetry participation after installation, see https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.4/tap/opting-out-telemetry.html[Opting out of telemetry collection].
