--- a/docs/deployment_guide/partner_editable/post_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/post_deployment.adoc
@@ -31,12 +31,17 @@
 |`TanzuApiToken`
 |API Token
 |
-|VMware Tanzu Network user account and authentication (UAA) API refresh token. For more information, refer to https://network.pivotal.io/docs/api[VMware Tanzu Network API Documentation].
+|VMware Tanzu Network user account and authentication (UAA) API refresh token. For more information, refer to https://network.tanzu.vmware.com/docs/api[VMware Tanzu Network API Documentation].
 
 |`TanzuNetRelocateImages`
 |Relocate TAP images
 |`No`
 |Choose `Yes` to relocate TAP images from the VMware Tanzu Network registry to your ECR registry from before attempting installation. If you do not relocate images, Tanzu Application Platform will depend directly on the VMware Tanzu Network registry for its continued operation.
+
+|`TAPClusterArch`
+|EKS single or multi-cluster / TAP Cluster Architecture
+|`single`
+|Choose `multi` to deploy Tanzu Application Platform with multicluster.
 |====
 
 [%autowidth.stretch]
@@ -46,8 +51,8 @@
 
 |`TAPVersion`
 |Version
-|`1.2.0`
-|Version of TAP to deploy. The selected version must also support the selected Kubernetes version. For more information, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.1/tap/GUID-prerequisites.html#kubernetes-cluster-requirements-3[Kubernetes cluster requirements].
+|`1.4.0`
+|Version of TAP to deploy. The selected version must also support the selected Kubernetes version. For more information, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.4/tap/prerequisites.html#kubernetes-cluster-requirements-3[Kubernetes cluster requirements].
 
 |`TAPDomainName`
 |Domain name
@@ -145,8 +150,8 @@
 
 |`KubernetesVersion`
 |Kubernetes version
-|`1.21`
-|Version of Kubernetes control plane to deploy. The selected version must be supported the selected version of TAP. For more information, refer to Kubernetes cluster requirements (https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.1/tap/GUID-prerequisites.html#kubernetes-cluster-requirements-3).
+|`1.23`
+|Version of Kubernetes control plane to deploy. The selected version must be supported the selected version of TAP. For more information, refer to  https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.4/tap/prerequisites.html#kubernetes-cluster-requirements-3[Kubernetes cluster requirements].
 
 |`NodeInstanceType`
 |Instance type
@@ -161,12 +166,12 @@
 |`NumberOfNodes`
 |Number of nodes
 |`4`
-|Minimum number of nodes to create for the TAP EKS cluster.
+|Minimum number of nodes to create for each TAP EKS cluster.
 
 |`MaxNumberOfNodes`
 |Maximum number of nodes
 |`6`
-|Maximum number of available nodes for the TAP EKS cluster in auto scaling.
+|Maximum number of available nodes for each TAP EKS cluster in auto scaling.
 |====
 
 [%autowidth.stretch]
@@ -237,12 +242,17 @@
 |`TanzuApiToken`
 |API Token
 |
-|VMware Tanzu Network user account and authentication (UAA) API refresh token. For more information, refer to https://network.pivotal.io/docs/api[VMware Tanzu Network API Documentation].
+|VMware Tanzu Network user account and authentication (UAA) API refresh token. For more information, refer to https://network.tanzu.vmware.com/docs/api[VMware Tanzu Network API Documentation].
 
 |`TanzuNetRelocateImages`
 |Relocate TAP images
 |`No`
 |Choose `Yes` to relocate TAP images from the VMware Tanzu Network registry to your ECR registry from before attempting installation. If you do not relocate images, Tanzu Application Platform will depend directly on the VMware Tanzu Network registry for its continued operation.
+
+|`TAPClusterArch`
+|EKS single or multi-cluster / TAP Cluster Architecture
+|`single`
+|Choose `multi` to deploy Tanzu Application Platform with multicluster.
 |====
 
 [%autowidth.stretch]
@@ -252,7 +262,7 @@
 
 |`TAPVersion`
 |Version
-|`1.2.0`
+|`1.4.0`
 |Version of TAP to deploy. The selected version must also support the       selected Kubernetes version. For more information, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.1/tap/GUID-prerequisites.html#kubernetes-cluster-requirements-3[Kubernetes cluster requirements].
 
 |`TAPDomainName`
@@ -331,8 +341,9 @@
 
 |`KubernetesVersion`
 |Kubernetes version
-|`1.21`
-|Version of Kubernetes control plane to deploy. The selected version must be supported the selected version of TAP. For more information, refer to Kubernetes cluster requirements (https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.1/tap/GUID-prerequisites.html#kubernetes-cluster-requirements-3).
+|`1.23`
+|Version of Kubernetes control plane to deploy. The selected version must be supported the selected version of TAP. For more information, refer to https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.4/tap/prerequisites.html#kubernetes-cluster-requirements-3[Kubernetes cluster requirements].
+
 
 |`NodeInstanceType`
 |Instance type
@@ -346,13 +357,13 @@
 
 |`NumberOfNodes`
 |Number of nodes
-|`4`
-|Minimum number of nodes to create for the TAP EKS cluster.
+|single cluster `4` 
+|Minimum number of nodes to create for each TAP EKS cluster.
 
 |`MaxNumberOfNodes`
 |Maximum number of nodes
 |`6`
-|Maximum number of available nodes for the TAP EKS cluster in auto scaling.
+|Maximum number of available nodes for each TAP EKS cluster in auto scaling.
 |====
 
 [%autowidth.stretch]
